@@ -130,7 +130,7 @@ AM_CONDITIONAL(USE_MMX, test x$use_mmx_asm = xyes)
 
 AC_DEFINE(GTK_ENABLE_BROKEN,1,[Use broken and deprectaded Gtk stuff])
 
-AC_OUTPUT([
+AC_OUTPUT([ intl/Makefile m4/Makefile 
 Makefile
 src/Makefile
 src/libnr/Makefile
@@ -141,10 +141,8 @@ src/widgets/Makefile
 src/helper/Makefile
 src/dialogs/Makefile
 src/display/Makefile
-glade/Makefile
 po/Makefile.in
-m4/Makefile
-intl/Makefile 
+glade/Makefile
 sodipodi.spec
 sodipodi.1
 ])
