@@ -1,3 +1,7 @@
+2002-12-02  Lauris Kaplinski  <lauris@kaplinski.com>
+
+	* src/dialogs/desktop-properties.c: Partial color picker implementation
+
 2002-12-01  Lauris Kaplinski  <lauris@kaplinski.com>
 
 	* src/dialogs/text-edit.c: GtkObject/GObject cleanup
